refactor: simplify Makefile by removing unnecessary build directories and targets

--- a/projekt/Makefile
+++ b/projekt/Makefile
@@ -6,71 +6,67 @@ LDFLAGS =
 # ===== project layout =====
 PROJECT_NAME = compiler
 SRC_DIR      = .
-BUILD_DIR    = build
-OBJ_DIR      = $(BUILD_DIR)/obj
 
 # ===== sources/objects for main build =====
 SOURCES  = $(wildcard $(SRC_DIR)/*.c)
-OBJECTS  = $(SOURCES:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
+OBJECTS  = $(SOURCES:$(SRC_DIR)/%.c=%.o)
 
 # ===== default targets =====
-.PHONY: all clean rebuild run \
+.PHONY: all clean clean-objects rebuild run \
         lex-test lex-dump \
         test-stack test-symtable test-scopes test-integration tests \
         build-sem-tests test-sem sem sem-tests semantic-tests \
         check-sem-files print-sem-dir
 
-all: $(BUILD_DIR)/$(PROJECT_NAME)
+all: $(PROJECT_NAME) clean-objects
 
-$(BUILD_DIR):
-	mkdir -p $(BUILD_DIR)
-
-$(OBJ_DIR):
-	mkdir -p $(OBJ_DIR)
-
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c | $(OBJ_DIR)
+%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(BUILD_DIR)/$(PROJECT_NAME): $(OBJECTS) | $(BUILD_DIR)
+$(PROJECT_NAME): $(OBJECTS)
 	$(CC) $(OBJECTS) $(LDFLAGS) -o $@
 
+clean-objects:
+	rm -f *.o
+
 clean:
-	rm -rf $(BUILD_DIR)
+	rm -f *.o \
+	      $(PROJECT_NAME) \
+	      scan_dump \
+	      test_stack test_symtable test_scopes test_integration
 
 rebuild: clean all
 
-run: $(BUILD_DIR)/$(PROJECT_NAME)
-	./$(BUILD_DIR)/$(PROJECT_NAME)
+run: $(PROJECT_NAME)
+	./$(PROJECT_NAME)
 
 # =================================================================
 #                       LEX TESTS (scan_dump)
 # =================================================================
-# testy máš o úroveň výš:
 LEX_TEST_DIR := ../test/lex/other
 
-$(OBJ_DIR)/scan_dump.o: $(LEX_TEST_DIR)/scan_dump.c scanner.h token.h error.h | $(OBJ_DIR)
+scan_dump.o: $(LEX_TEST_DIR)/scan_dump.c scanner.h token.h error.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(BUILD_DIR)/scan_dump: $(OBJ_DIR)/scan_dump.o $(OBJ_DIR)/scanner.o $(OBJ_DIR)/token.o $(OBJ_DIR)/string.o $(OBJ_DIR)/error.o | $(BUILD_DIR)
+scan_dump: scan_dump.o scanner.o token.o string.o error.o
 	$(CC) $(CFLAGS) $^ -o $@
 
 lex-test: lex-dump
 
-lex-dump: $(BUILD_DIR)/scan_dump
+lex-dump: scan_dump
 	@if [ -z "$(FILE)" ]; then \
 		echo 'Usage: make lex-dump FILE=../test/lex/ok/ids_basic.wren'; \
 	else \
 		echo '>>> Running scan_dump on $(FILE)'; \
-		./$(BUILD_DIR)/scan_dump $(FILE); \
+		./scan_dump $(FILE); \
 	fi
 
 # =================================================================
 #          SEMANTIC UNIT & INTEGRATION TESTS (stack/symtable/scopes)
 # =================================================================
-# testy máš v ../test/sem
 SEM_TESTS_DIR := ../test/sem
 
-# drobný debug target
+
 print-sem-dir:
 	@echo "SEM_TESTS_DIR = $(SEM_TESTS_DIR)"
 	@ls -l $(SEM_TESTS_DIR) || true
@@ -87,34 +83,34 @@ check-sem-files:
 	if [ $$missing -ne 0 ]; then exit 2; fi
 
 # --- build: jednotlivé test binárky --------------------------------
-$(BUILD_DIR)/test_stack: stack.c $(SEM_TESTS_DIR)/test_stack.c | $(BUILD_DIR) check-sem-files
+test_stack: stack.c $(SEM_TESTS_DIR)/test_stack.c | check-sem-files
 	$(CC) $(CFLAGS) $^ -o $@
 
-$(BUILD_DIR)/test_symtable: symtable.c $(SEM_TESTS_DIR)/test_symtable.c | $(BUILD_DIR) check-sem-files
+test_symtable: symtable.c $(SEM_TESTS_DIR)/test_symtable.c | check-sem-files
 	$(CC) $(CFLAGS) $^ -o $@
 
-$(BUILD_DIR)/test_scopes: stack.c symtable.c scope_stack.c $(SEM_TESTS_DIR)/test_scope_stack.c | $(BUILD_DIR) check-sem-files
+test_scopes: stack.c symtable.c scope_stack.c $(SEM_TESTS_DIR)/test_scope_stack.c | check-sem-files
 	$(CC) $(CFLAGS) $^ -o $@
 
-$(BUILD_DIR)/test_integration: stack.c symtable.c scope_stack.c $(SEM_TESTS_DIR)/test_integration_fill_dump.c | $(BUILD_DIR) check-sem-files
+test_integration: stack.c symtable.c scope_stack.c $(SEM_TESTS_DIR)/test_integration_fill_dump.c | check-sem-files
 	$(CC) $(CFLAGS) $^ -o $@
 
 # --- run: pohodlné spouštěcí aliasy --------------------------------
-test-stack: $(BUILD_DIR)/test_stack
+test-stack: test_stack
 	@echo '>>> Running stack unit tests'
-	@./$(BUILD_DIR)/test_stack
+	@./test_stack
 
-test-symtable: $(BUILD_DIR)/test_symtable
+test-symtable: test_symtable
 	@echo '>>> Running symtable unit tests (bulk fill + dump)'
-	@./$(BUILD_DIR)/test_symtable
+	@./test_symtable
 
-test-scopes: $(BUILD_DIR)/test_scopes
+test-scopes: test_scopes
 	@echo '>>> Running scope_stack unit tests (shadowing, redeclare, cleanup)'
-	@./$(BUILD_DIR)/test_scopes
+	@./test_scopes
 
-test-integration: $(BUILD_DIR)/test_integration
+test-integration: test_integration
 	@echo '>>> Running integration test (stack + scope_stack + symtable)'
-	@./$(BUILD_DIR)/test_integration
+	@./test_integration
 
 # Spustí všechny výše
 tests: test-stack test-symtable test-scopes test-integration
@@ -122,7 +118,7 @@ tests: test-stack test-symtable test-scopes test-integration
 # =================================================================
 #          SEMANTIC TEST SUITE (symtable/scopes/integration)
 # =================================================================
-build-sem-tests: $(BUILD_DIR)/test_symtable $(BUILD_DIR)/test_scopes $(BUILD_DIR)/test_integration
+build-sem-tests: test_symtable test_scopes test_integration
 
 # aliasy: 'make sem' nebo 'make test-sem' spustí všechny sémantické testy
 test-sem sem sem-tests semantic-tests: test-symtable test-scopes test-integration
