--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,9 @@ dkms.conf
 build/
 projekt/run_stx_tests.sh
 tests/
+ifjMoreTests/
+projekt/run_cc_tests.sh
+projekt/ic25int-linux-x86_64
+projekt/test_out.txt
+projekt/out.txt
 test/python/__pycache__
